--- a/todo
+++ b/todo
@@ -14,3 +14,5 @@ Features :
     - RMS(Waveform)
     - ZCR(STW)
     - ZCR(Waveform)
+    - SpectralCentroid(FT | STFT)
+    - SpectralSpread(FT | STFT)
